# hl-video-validation-pipeline

./: .gitignore  README.md  SCORING_ENGINE_PLAN.md  checks.md  pyproject.toml  validate.sh
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
bachman_cortex/: CONTEXT.md  cli.py  config.py  data_types.py  per_frame_store.py  pipeline.py  reporting.py  requirements.txt  run_batch.py  scoring_engine.py  segmentation.py
bachman_cortex/checks/: body_part_visibility.py  check_results.py  face_presence.py  frame_quality.py  hand_object_interaction.py  hand_visibility.py  luminance.py  luminance_blur.py  motion_analysis.py  participants.py  pov_hand_angle.py  privacy_safety.py  video_metadata.py  view_obstruction.py
bachman_cortex/models/: download_models.py  grounding_dino_detector.py  hand_detector.py  hand_detector_100doh.py  scrfd_detector.py  yolo_pose_detector.py
bachman_cortex/tests/: benchmark_models.py  generate_test_video.py
bachman_cortex/utils/: early_stop.py  frame_extractor.py  gpmd.py  metadata_observations.py  review_runs.py  video_metadata.py
ml_checks/: CONTEXT.md  README.md  pipeline.py  requirements.txt  run_batch.py
ml_checks/checks/: check_results.py  face_presence.py  hand_object_interaction.py  hand_visibility.py  luminance_blur.py  motion_analysis.py  participants.py  pov_hand_angle.py  privacy_safety.py  (+2 more)
tests/: test_config.py  test_motion_analysis.py  test_participants.py  test_per_frame_store.py  test_reporting.py  test_segmentation.py  test_view_obstruction.py
(+8 files in other folders)
